force-app/main/default/objects/Project_Extension__c/fields/Drop_Dead_RCD_A__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_RCD_A__c</fullName>
    <label>Drop Dead RCD (A)</label>
    <type>Date</type>
</CustomField>