force-app/main/default/objects/Project_Extension__c/fields/Drop_Dead_RCD_F__c.field-meta.xml
<CustomField>
    <fullName>Drop_Dead_RCD_F__c</fullName>
    <label>Drop Dead RCD (F)</label>
    <type>Date</type>
</CustomField>