force-app/main/default/objects/Project_Extension__c/fields/EHS_701_FRM_01_A__c.field-meta.xml
<CustomField>
    <fullName>EHS_701_FRM_01_A__c</fullName>
    <label>EHS-701-FRM-01 (A)</label>
    <type>Date</type>
</CustomField>