force-app/main/default/objects/Project_Extension__c/fields/EHS_Hazards_Material_Inventory_A__c.field-meta.xml
<CustomField>
    <fullName>EHS_Hazards_Material_Inventory_A__c</fullName>
    <label>EHS Hazards Material Inventory (A)</label>
    <type>Date</type>
</CustomField>