force-app/main/default/objects/Project_Extension__c/fields/EHS_Hazards_Material_Inventory_F__c.field-meta.xml
<CustomField>
    <fullName>EHS_Hazards_Material_Inventory_F__c</fullName>
    <label>EHS Hazards Material Inventory (F)</label>
    <type>Date</type>
</CustomField>