force-app/main/default/objects/Project_Extension__c/fields/Eng_PO_Received_in_NetSuite_F__c.field-meta.xml
<CustomField>
    <fullName>Eng_PO_Received_in_NetSuite_F__c</fullName>
    <label>Eng. PO Received in NetSuite (F)</label>
    <type>Date</type>
</CustomField>