force-app/main/default/objects/Project_Extension__c/fields/ENMT_CSSng_Template_A__c.field-meta.xml
<CustomField>
    <fullName>ENMT_CSSng_Template_A__c</fullName>
    <label>ENMT / CSSng Template (A)</label>
    <type>Date</type>
</CustomField>