force-app/main/default/objects/Project_Extension__c/fields/ENMT_CSSng_Template_F__c.field-meta.xml
<CustomField>
    <fullName>ENMT_CSSng_Template_F__c</fullName>
    <label>ENMT / CSSng Template (F)</label>
    <type>Date</type>
</CustomField>