force-app/main/default/objects/Project_Extension__c/fields/Environmental_Assessment_s_Ordered_A__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Assessment_s_Ordered_A__c</fullName>
    <label>Environmental Assessment(s) Ordered (A)</label>
    <type>Date</type>
</CustomField>