force-app/main/default/objects/Project_Extension__c/fields/Equipment_Cabinet_Built_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cabinet_Built_F__c</fullName>
    <label>Cabinet set and powered (F)</label>
    <type>Date</type>
</CustomField>