force-app/main/default/objects/Project_Extension__c/fields/Equipment_Ready_to_Ship_A__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ready_to_Ship_A__c</fullName>
    <label>Equipment Ready to Ship (A)</label>
    <type>Date</type>
</CustomField>