force-app/main/default/objects/Project_Extension__c/fields/Equipment_Ready_to_Ship_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ready_to_Ship_F__c</fullName>
    <label>Equipment Ready to Ship (F)</label>
    <type>Date</type>
</CustomField>