force-app/main/default/objects/Project_Extension__c/fields/Equipment_serf_A__c.field-meta.xml
<CustomField>
    <fullName>Equipment_serf_A__c</fullName>
    <label>SERF to Supplier (A)</label>
    <type>Date</type>
</CustomField>