force-app/main/default/objects/Project_Extension__c/fields/Equipment_serf_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_serf_F__c</fullName>
    <label>SERF to Supplier (F)</label>
    <type>Date</type>
</CustomField>