force-app/main/default/objects/Project_Extension__c/fields/Equipment_Shipped_A__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Shipped_A__c</fullName>
    <label>Equipment Shipped (A)</label>
    <type>Date</type>
</CustomField>