force-app/main/default/objects/Project_Extension__c/fields/Equipment_Shipped_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Shipped_F__c</fullName>
    <label>Equipment Shipped (F)</label>
    <type>Date</type>
</CustomField>