force-app/main/default/objects/Project_Extension__c/fields/Exe_Lease_Amdt_Sent_to_Customer_F__c.field-meta.xml
<CustomField>
    <fullName>Exe_Lease_Amdt_Sent_to_Customer_F__c</fullName>
    <label>Exe Lease/Amdt Sent to Customer (F)</label>
    <type>Date</type>
</CustomField>