force-app/main/default/objects/Project_Extension__c/fields/FAA_Study_Requested_A__c.field-meta.xml
<CustomField>
    <fullName>FAA_Study_Requested_A__c</fullName>
    <label>FAA Study Requested (A)</label>
    <type>Date</type>
</CustomField>