force-app/main/default/objects/Project_Extension__c/fields/FAA_Study_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>FAA_Study_Requested_F__c</fullName>
    <label>FAA Study Requested (F)</label>
    <type>Date</type>
</CustomField>