force-app/main/default/objects/Project_Extension__c/fields/FAST_Solution_Required__c.field-meta.xml
<CustomField>
    <fullName>FAST_Solution_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAST Solution Required</label>
    <type>Checkbox</type>
</CustomField>