force-app/main/default/objects/Project_Extension__c/fields/FE_Agreeent_sent_to_customer_F__c.field-meta.xml
<CustomField>
    <fullName>FE_Agreeent_sent_to_customer_F__c</fullName>
    <label>FE Agreeent sent to customer (F)</label>
    <type>Date</type>
</CustomField>