force-app/main/default/objects/Project_Extension__c/fields/FE_LOI_Exercise_of_ROFR_A__c.field-meta.xml
<CustomField>
    <fullName>FE_LOI_Exercise_of_ROFR_A__c</fullName>
    <label>FE LOI/Exercise of ROFR (A)</label>
    <type>Date</type>
</CustomField>