force-app/main/default/objects/Project_Extension__c/fields/FE_SLA_A__c.field-meta.xml
<CustomField>
    <fullName>FE_SLA_A__c</fullName>
    <label>Fully Executed SLA (A)</label>
    <type>Date</type>
</CustomField>