force-app/main/default/objects/Project_Extension__c/fields/FE_SLA_F__c.field-meta.xml
<CustomField>
    <fullName>FE_SLA_F__c</fullName>
    <label>Fully Executed SLA (F)</label>
    <type>Date</type>
</CustomField>