force-app/main/default/objects/Project_Extension__c/fields/Final_Exhibit_F__c.field-meta.xml
<CustomField>
    <fullName>Final_Exhibit_F__c</fullName>
    <label>Final Exhibit S (F)</label>
    <type>Date</type>
</CustomField>