force-app/main/default/objects/Project_Extension__c/fields/Flat_File_Loaded_F__c.field-meta.xml
<CustomField>
    <fullName>Flat_File_Loaded_F__c</fullName>
    <label>Flat File Loaded (F)</label>
    <type>Date</type>
</CustomField>