force-app/main/default/objects/Project_Extension__c/fields/Flat_File_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Flat_File_Received_A__c</fullName>
    <label>Flat File Created (A)</label>
    <type>Date</type>
</CustomField>