force-app/main/default/objects/Project_Extension__c/fields/GC_COI_Received_F__c.field-meta.xml
<CustomField>
    <fullName>GC_COI_Received_F__c</fullName>
    <label>GC COI Received (F)</label>
    <type>Date</type>
</CustomField>