force-app/main/default/objects/Project_Extension__c/fields/Generator_Installed_A__c.field-meta.xml
<CustomField>
    <fullName>Generator_Installed_A__c</fullName>
    <label>Generator Installed (A)</label>
    <type>Date</type>
</CustomField>