force-app/main/default/objects/Project_Extension__c/fields/Generator_Installed_F__c.field-meta.xml
<CustomField>
    <fullName>Generator_Installed_F__c</fullName>
    <label>Generator Installed (F)</label>
    <type>Date</type>
</CustomField>