force-app/main/default/objects/Project_Extension__c/fields/Generator_Manu_Doc_A__c.field-meta.xml
<CustomField>
    <fullName>Generator_Manu_Doc_A__c</fullName>
    <label>Generator / Manu Doc (A)</label>
    <type>Date</type>
</CustomField>