force-app/main/default/objects/Project_Extension__c/fields/Generator_Manu_Doc_F__c.field-meta.xml
<CustomField>
    <fullName>Generator_Manu_Doc_F__c</fullName>
    <label>Generator / Manu Doc (F)</label>
    <type>Date</type>
</CustomField>