force-app/main/default/objects/Project_Extension__c/fields/Generator_NTP_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>Generator_NTP_Approved_A__c</fullName>
    <label>Generator NTP Approved (A)</label>
    <type>Date</type>
</CustomField>