force-app/main/default/objects/Project_Extension__c/fields/Generator_NTP_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Generator_NTP_Approved_F__c</fullName>
    <label>Generator NTP Approved (F)</label>
    <type>Date</type>
</CustomField>