force-app/main/default/objects/Project_Extension__c/fields/Generator_NTP_PO_Issued_F__c.field-meta.xml
<CustomField>
    <fullName>Generator_NTP_PO_Issued_F__c</fullName>
    <label>Generator NTP PO Issued (F)</label>
    <type>Date</type>
</CustomField>