force-app/main/default/objects/Project_Extension__c/fields/Generator_Pre_Con_Completed_A__c.field-meta.xml
<CustomField>
    <fullName>Generator_Pre_Con_Completed_A__c</fullName>
    <label>Generator Pre Con Completed (A)</label>
    <type>Date</type>
</CustomField>