force-app/main/default/objects/Project_Extension__c/fields/Generator_Pre_Con_Completed_F__c.field-meta.xml
<CustomField>
    <fullName>Generator_Pre_Con_Completed_F__c</fullName>
    <label>Generator Pre Con Completed (F)</label>
    <type>Date</type>
</CustomField>