force-app/main/default/objects/Project_Extension__c/fields/GLBO_approved_A__c.field-meta.xml
<CustomField>
    <fullName>GLBO_approved_A__c</fullName>
    <label>GLBO approved (A)</label>
    <type>Date</type>
</CustomField>