force-app/main/default/objects/Project_Extension__c/fields/GLBO_approved_F__c.field-meta.xml
<CustomField>
    <fullName>GLBO_approved_F__c</fullName>
    <label>GLBO approved (F)</label>
    <type>Date</type>
</CustomField>