force-app/main/default/objects/Project_Extension__c/fields/Harmoni_NTP_Issued_A__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_NTP_Issued_A__c</fullName>
    <label>Harmoni NTP Issued (A)</label>
    <type>Date</type>
</CustomField>