force-app/main/default/objects/Project_Extension__c/fields/Harmoni_NTP_Issued_F__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_NTP_Issued_F__c</fullName>
    <label>Harmoni NTP Issued (F)</label>
    <type>Date</type>
</CustomField>