force-app/main/default/objects/Project_Extension__c/fields/Harmoni_PO_to_Equipment_Provider_A__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_PO_to_Equipment_Provider_A__c</fullName>
    <label>RAN PO to Material Supplier (A)</label>
    <type>Date</type>
</CustomField>