force-app/main/default/objects/Project_Extension__c/fields/Harmoni_PO_to_Equipment_Provider_F__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_PO_to_Equipment_Provider_F__c</fullName>
    <label>RAN PO to Material Supplier (F)</label>
    <type>Date</type>
</CustomField>