force-app/main/default/objects/Project_Extension__c/fields/Harmoni_Power_Payment_Account_Set_up_A__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_Power_Payment_Account_Set_up_A__c</fullName>
    <label>Harmoni Pwr Pymt Acct Set-up Conf (A)</label>
    <type>Date</type>
</CustomField>