force-app/main/default/objects/Project_Extension__c/fields/Harmoni_Power_Payment_Account_Set_up_F__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_Power_Payment_Account_Set_up_F__c</fullName>
    <label>Harmoni Pwr Pymt Acct Set-up Conf (F)</label>
    <type>Date</type>
</CustomField>