force-app/main/default/objects/Project_Extension__c/fields/Harmoni_Power_Payment_Form_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_Power_Payment_Form_Submitted_A__c</fullName>
    <label>Harmoni Power Payment Form Submitted (A)</label>
    <type>Date</type>
</CustomField>