force-app/main/default/objects/Project_Extension__c/fields/Harmoni_Site_Acquisition_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Harmoni_Site_Acquisition_Complete_A__c</fullName>
    <label>Harmoni Site Acquisition Complete (A)</label>
    <type>Date</type>
</CustomField>