force-app/main/default/objects/Project_Extension__c/fields/In_Year_Gating_Item__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Gating_Item__c</fullName>
    <label>In Year Gating Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Zoning/Litigation</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>