force-app/main/default/objects/Project_Extension__c/fields/Internal_approval_received_A__c.field-meta.xml
<CustomField>
    <fullName>Internal_approval_received_A__c</fullName>
    <label>Internal approval received (A)</label>
    <type>Date</type>
</CustomField>