force-app/main/default/objects/Project_Extension__c/fields/Internal_approval_received_F__c.field-meta.xml
<CustomField>
    <fullName>Internal_approval_received_F__c</fullName>
    <label>Internal approval received (F)</label>
    <type>Date</type>
</CustomField>