force-app/main/default/objects/Project_Extension__c/fields/Job_Hazard_Safety_Coversheet_F__c.field-meta.xml
<CustomField>
    <fullName>Job_Hazard_Safety_Coversheet_F__c</fullName>
    <label>Job Hazard/Safety &amp; Coversheet (F)</label>
    <type>Date</type>
</CustomField>