force-app/main/default/objects/Project_Extension__c/fields/LA_Invoice_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>LA_Invoice_Approved_A__c</fullName>
    <label>LA Invoice Approved (A)</label>
    <type>Date</type>
</CustomField>