force-app/main/default/objects/Project_Extension__c/fields/LA_Invoice_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>LA_Invoice_Approved_F__c</fullName>
    <label>LA Invoice Approved (F)</label>
    <type>Date</type>
</CustomField>