force-app/main/default/objects/Project_Extension__c/fields/Lease_Draft_from_Landlord_A__c.field-meta.xml
<CustomField>
    <fullName>Lease_Draft_from_Landlord_A__c</fullName>
    <label>Ground Lease Draft from Landlord (A)</label>
    <type>Date</type>
</CustomField>