force-app/main/default/objects/Project_Extension__c/fields/Lease_Exhibit_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Lease_Exhibit_Approved_F__c</fullName>
    <label>Lease Exhibit Approved (F)</label>
    <type>Date</type>
</CustomField>