force-app/main/default/objects/Project_Extension__c/fields/Lease_Exhibit_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Lease_Exhibit_Received_A__c</fullName>
    <label>Lease Exhibit Received (A)</label>
    <type>Date</type>
</CustomField>