force-app/main/default/objects/Project_Extension__c/fields/Lien_Release_Loaded_to_Filetra_A__c.field-meta.xml
<CustomField>
    <fullName>Lien_Release_Loaded_to_Filetra_A__c</fullName>
    <label>Bill of Sale / Lien Uploaded (A)</label>
    <type>Date</type>
</CustomField>