force-app/main/default/objects/Project_Extension__c/fields/Lighting_Kit_Ordered_A__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Kit_Ordered_A__c</fullName>
    <label>Lighting Kit Ordered (A)</label>
    <type>Date</type>
</CustomField>