force-app/main/default/objects/Project_Extension__c/fields/Lighting_Kit_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Kit_Ordered_F__c</fullName>
    <label>Lighting Kit Ordered (F)</label>
    <type>Date</type>
</CustomField>