force-app/main/default/objects/Project_Extension__c/fields/LOS_Package_Rec_d_A__c.field-meta.xml
<CustomField>
    <fullName>LOS_Package_Rec_d_A__c</fullName>
    <label>LOS Package Rec&apos;d (A)</label>
    <type>Date</type>
</CustomField>