force-app/main/default/objects/Project_Extension__c/fields/Market_Scoping_Call_A__c.field-meta.xml
<CustomField>
    <fullName>Market_Scoping_Call_A__c</fullName>
    <label>Market Scoping Call (A)</label>
    <type>Date</type>
</CustomField>