force-app/main/default/objects/Project_Extension__c/fields/Market_Scoping_Call_F__c.field-meta.xml
<CustomField>
    <fullName>Market_Scoping_Call_F__c</fullName>
    <label>Market Scoping Call (F)</label>
    <type>Date</type>
</CustomField>