force-app/main/default/objects/Project_Extension__c/fields/Material_Inventory_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Material_Inventory_Complete_A__c</fullName>
    <label>Material Inventory Complete (A)</label>
    <type>Date</type>
</CustomField>