force-app/main/default/objects/Project_Extension__c/fields/MEI_COMPLETE_A__c.field-meta.xml
<CustomField>
    <fullName>MEI_COMPLETE_A__c</fullName>
    <label>MEI COMPLETE (A)</label>
    <type>Date</type>
</CustomField>