force-app/main/default/objects/Project_Extension__c/fields/MEI_COMPLETE_F__c.field-meta.xml
<CustomField>
    <fullName>MEI_COMPLETE_F__c</fullName>
    <label>MEI COMPLETE (F)</label>
    <type>Date</type>
</CustomField>