force-app/main/default/objects/Project_Extension__c/fields/Microwave_Install__c.field-meta.xml
<CustomField>
    <fullName>Microwave_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microwave Install</label>
    <type>Checkbox</type>
</CustomField>