force-app/main/default/objects/Project_Extension__c/fields/Microwave_SA_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Microwave_SA_Complete_A__c</fullName>
    <label>MW Structural Complete (A)</label>
    <type>Date</type>
</CustomField>