force-app/main/default/objects/Project_Extension__c/fields/Microwave_SA_Complete_F__c.field-meta.xml
<CustomField>
    <fullName>Microwave_SA_Complete_F__c</fullName>
    <label>MW Structural Complete (F)</label>
    <type>Date</type>
</CustomField>