force-app/main/default/objects/Project_Extension__c/fields/Mount_Analysis_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Mount_Analysis_Ordered_F__c</fullName>
    <label>Mount Analysis Ordered (F)</label>
    <type>Date</type>
</CustomField>