force-app/main/default/objects/Project_Extension__c/fields/Mount_Analysis_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Mount_Analysis_Received_A__c</fullName>
    <label>Mount Analysis Received (A)</label>
    <type>Date</type>
</CustomField>