force-app/main/default/objects/Project_Extension__c/fields/MW_BOM_Received_from_Installer_A__c.field-meta.xml
<CustomField>
    <fullName>MW_BOM_Received_from_Installer_A__c</fullName>
    <label>MW BOM Received from Installer (A)</label>
    <type>Date</type>
</CustomField>