force-app/main/default/objects/Project_Extension__c/fields/MW_Design_Received_A__c.field-meta.xml
<CustomField>
    <fullName>MW_Design_Received_A__c</fullName>
    <label>MW Design Received (A)</label>
    <type>Date</type>
</CustomField>