force-app/main/default/objects/Project_Extension__c/fields/MW_Equipment_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>MW_Equipment_Ordered_F__c</fullName>
    <label>MW Equipment Ordered (F)</label>
    <type>Date</type>
</CustomField>