force-app/main/default/objects/Project_Extension__c/fields/MW_Lease_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>MW_Lease_Complete_A__c</fullName>
    <label>MW Lease Complete (A)</label>
    <type>Date</type>
</CustomField>