force-app/main/default/objects/Project_Extension__c/fields/MW_LOS_Request_F__c.field-meta.xml
<CustomField>
    <fullName>MW_LOS_Request_F__c</fullName>
    <label>MW LOS Request (F)</label>
    <type>Date</type>
</CustomField>