force-app/main/default/objects/Project_Extension__c/fields/MW_LOS_Submitted_to_Customer_F__c.field-meta.xml
<CustomField>
    <fullName>MW_LOS_Submitted_to_Customer_F__c</fullName>
    <label>MW LOS Submitted to Customer (F)</label>
    <type>Date</type>
</CustomField>