force-app/main/default/objects/Project_Extension__c/fields/Not_able_to_Obtain_Title_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_able_to_Obtain_Title_Reason__c</fullName>
    <label>Not able to Obtain Title Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Governmental Land</fullName>
            </value>
            <value>
                <fullName>Landlord Unwilling</fullName>
            </value>
            <value>
                <fullName>License, not lease</fullName>
            </value>
            <value>
                <fullName>Managed Sites (MTA, BNSF)</fullName>
            </value>
            <value>
                <fullName>Title Policy Cost Prohibitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>