force-app/main/default/objects/Project_Extension__c/fields/Notice_Provided_A__c.field-meta.xml
<CustomField>
    <fullName>Notice_Provided_A__c</fullName>
    <label>Notice Provided (A)</label>
    <type>Date</type>
</CustomField>