force-app/main/default/objects/Project_Extension__c/fields/Notice_Provided_F__c.field-meta.xml
<CustomField>
    <fullName>Notice_Provided_F__c</fullName>
    <label>Notice Provided (F)</label>
    <type>Date</type>
</CustomField>