force-app/main/default/objects/Project_Extension__c/fields/OEM_Fxd_Generator_Comsng_form_A__c.field-meta.xml
<CustomField>
    <fullName>OEM_Fxd_Generator_Comsng_form_A__c</fullName>
    <label>OEM Fxd Generator Comsng form (A)</label>
    <type>Date</type>
</CustomField>