force-app/main/default/objects/Project_Extension__c/fields/OEM_Fxd_Generator_Comsng_form_F__c.field-meta.xml
<CustomField>
    <fullName>OEM_Fxd_Generator_Comsng_form_F__c</fullName>
    <label>OEM Fxd Generator Comsng form (F)</label>
    <type>Date</type>
</CustomField>