force-app/main/default/objects/Project_Extension__c/fields/of_SNDAs_Executed__c.field-meta.xml
<CustomField>
    <fullName>of_SNDAs_Executed__c</fullName>
    <label># of SNDAs Executed?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>