force-app/main/default/objects/Project_Extension__c/fields/of_SNDAs_Required__c.field-meta.xml
<CustomField>
    <fullName>of_SNDAs_Required__c</fullName>
    <label># of SNDAs Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>