force-app/main/default/objects/Project_Extension__c/fields/OOM_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>OOM_Approved_A__c</fullName>
    <label>Initial OOM Approved (A)</label>
    <type>Date</type>
</CustomField>