force-app/main/default/objects/Project_Extension__c/fields/OOM_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>OOM_Approved_F__c</fullName>
    <label>Initial OOM Approved (F)</label>
    <type>Date</type>
</CustomField>