force-app/main/default/objects/Project_Extension__c/fields/OOM_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>OOM_Submitted_A__c</fullName>
    <label>Initial OOM Submitted (A)</label>
    <type>Date</type>
</CustomField>