force-app/main/default/objects/Project_Extension__c/fields/Out_of_Franchise_Prep_Required__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Franchise_Prep_Required__c</fullName>
    <description>s</description>
    <label>Out of Franchise Prep Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>