force-app/main/default/objects/Project_Extension__c/fields/Packing_Slips_Load_to_Filetrac_F__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slips_Load_to_Filetrac_F__c</fullName>
    <label>Packing Slips Load to Filetrac (F)</label>
    <type>Date</type>
</CustomField>