force-app/main/default/objects/Project_Extension__c/fields/Phase_II_Ordered_A__c.field-meta.xml
<CustomField>
    <fullName>Phase_II_Ordered_A__c</fullName>
    <label>Phase II Ordered (A)</label>
    <type>Date</type>
</CustomField>