force-app/main/default/objects/Project_Extension__c/fields/Phase_II_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Phase_II_Ordered_F__c</fullName>
    <label>Phase II Ordered (F)</label>
    <type>Date</type>
</CustomField>