force-app/main/default/objects/Project_Extension__c/fields/PIM_Test_Results_A__c.field-meta.xml
<CustomField>
    <fullName>PIM_Test_Results_A__c</fullName>
    <label>RAN PIM Results Uploaded (A)</label>
    <type>Date</type>
</CustomField>