force-app/main/default/objects/Project_Extension__c/fields/PIM_Test_Results_F__c.field-meta.xml
<CustomField>
    <fullName>PIM_Test_Results_F__c</fullName>
    <label>RAN PIM Results Uploaded (F)</label>
    <type>Date</type>
</CustomField>