force-app/main/default/objects/Project_Extension__c/fields/PLA_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>PLA_Approved_A__c</fullName>
    <label>PLA Approved (A)</label>
    <type>Date</type>
</CustomField>