force-app/main/default/objects/Project_Extension__c/fields/PLA_Invoice_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>PLA_Invoice_Approved_F__c</fullName>
    <label>PLA Invoice Approved (F)</label>
    <type>Date</type>
</CustomField>