force-app/main/default/objects/Project_Extension__c/fields/PLA_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>PLA_Submitted_A__c</fullName>
    <label>PLA Submitted (A)</label>
    <type>Date</type>
</CustomField>