force-app/main/default/objects/Project_Extension__c/fields/PLA_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>PLA_Submitted_F__c</fullName>
    <label>PLA Submitted (F)</label>
    <type>Date</type>
</CustomField>