force-app/main/default/objects/Project_Extension__c/fields/PO_Confirmation_Equipment_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>PO_Confirmation_Equipment_Ordered_F__c</fullName>
    <label>RAN Materials Ordered (F)</label>
    <type>Date</type>
</CustomField>