force-app/main/default/objects/Project_Extension__c/fields/PO_Received_A__c.field-meta.xml
<CustomField>
    <fullName>PO_Received_A__c</fullName>
    <label>PO Received (A)</label>
    <type>Date</type>
</CustomField>